
Claiming to be at java.version 1.4.2 is a lie, of course -- we don't
really support all 1.4 features, such as assertions.  However, it is a
necessary lie, since Eclipse 3.0 explicitly tests java.version and
insists upon at least 1.4.1 to run.

Similarly, java.specification.version is up to 1.4 and
java.vm.version is at 1.4.2.

*Bug Fixes after the Jikes RVM 2.3.4 release:

*Internal Changes after the Jikes RVM 2.3.4 release:

*Jikes RVM 2.3.4 Release Notes (released December 21, 2004)
THe following four sections of the document contain the Jikes RVM
2.3.4 release notes.  They are:
**Highlights
**Other Notes
**Bug Fixes
**Internal Changes

*Highlights of the Jikes RVM 2.3.4 release:

**We now run Eclipse 3.0
You can use Jikes RVM to run Eclipse 3.0; this lets you run a free
IDE with a free VM.

**The port to PowerPC64 is virtually complete.  There are a few fringe opt 
compiler bugs remaining, but functionality has advanced to the point where 
development and production images of Jikes RVM are passing almost all 
regression tests. 

**MMTk has been moved out of $RVM_ROOT/rvm/src/vm/memory managers to 
$RVM_ROOT/MMTk.  It has also been reorganized to have the directory structure
match its package structure and thus is "Eclipse-friendly."  MMTk's
option parsing has been rewritten.  There are other internal 
changes as well.

**Major revision of the object model. All objects (arrays and scalars) 
are now layed out in a "forwards" direction. This simplifies and enables
many common GC techniques (scannable heap; card-marking) at the cost of a 
slight performance hit on AIX/PowerPC due to the need to make some null checks
explicit. See VM_ObjectModel.java for more details. 

**XML parsing with Xalan
Jikes RVM can now be configured so it always uses the Xalan XML
parser.  See the configuration file variable XALAN_J_DIR.

**We have switched to GNU Classpath version 0.12.
Versions 0.10 and 0.11 can still be used, if you set appropriate